# PyBck

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pybck/: BackupBuilder.py  BackupCleaner.py  BackupConfig.py  BackupValidator.py  __init__.py
test/: test_BackupBuilder.py  test_BackupCleaner.py  test_BackupConfig.py  test_BackupValidator.py
