[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybck"
version = "0.1.0"
description = "Professional backup tool for Windows"
requires-python = ">=3.8"

[project.scripts]
pybck = "pybck.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
